--- a/src/html/LoginInJectionBody.html
+++ b/src/html/LoginInJectionBody.html
@@ -1,14 +1,17 @@
 <!-- 安全提醒 -->
 <div style="position: absolute;background-color: rgba(255, 202, 202, 0.513);width: 100vw;bottom: 30px;left: 0;z-index: 999;color: rgb(255, 0, 0);padding: 10px;">
     <div style="text-align: center;font-weight: bolder;font-size: 20px;margin-bottom: 10px;">
-        本站不是 Microsoft 官方，是第三方代理站
+        LCY Copilot MStation 并非 Microsoft 所属站点。
     </div>
     <div style="font-size: 16px;text-align: center;font-weight: bold;margin-bottom: 20px;">
-        站点部署者可以轻松获取你在此界面输入的账号密码。
+        登录时请注意您的账号密码安全。
     </div>
     <div style="font-size: 16px;max-width: 700px;margin: auto;">
-        <div>1.请保证，只在信任的代理站使用密码登录！</div>
-        <div>2.如果一定要在不信任的代理站登录,可以使用邮件验证码或者Authenticator登录。</div>
-        <div>3.使用完不信任的代理站后，第一时间退出登录。</div>
+        <div>1.本站非 Microsoft 官方站点，若使用不安全的网络，可能存在泄露密码的风险。</div>
+        <div>2.您可以使用电子邮件或者Authenticator登录。</div>
+        <div>3.在使用完毕后，请尽快退出登录。</div>
+		<div style="font-size: 16px;text-align: center;font-weight: bold;margin-bottom: 20px;">
+			Powered by LCY Team
+		</div>
     </div>
 </div>
